# FAST-LIVO

./: CMakeLists.txt  package.xml
config/: MARS_LVIG.yaml  NTU_VIRAL.yaml  avia_resize.yaml  camera_MARS_LVIG.yaml  camera_NTU_VIRAL.yaml  camera_pinhole_resize.yaml
include/: IMU_Processing.hpp  common_lib.h  feature.h  map.h  preprocess.h
launch/: mapping_avia.launch.py
msg/: States.msg
src/: IMU_Processing.cpp  laserMapping.cpp  preprocess.cpp
