<?xml version="1.0"?>
<package format="3">
  <name>fast_livo</name>
  <version>0.0.0</version>

  <description>
    This is a modified version of FAST-LIO.
  </description>
  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
  <license>BSD</license>
  <author email="zhengcr@connect.hku.hk">Chunran Zheng</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>common_interfaces</depend>

  <depend>livox_ros_driver2</depend>
  <depend>vikit_ros2</depend>

  <depend>rosidl_default_runtime</depend>

  <depend>Eigen3</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>OpenCV</depend>
  <depend>Boost</depend>
  <depend>PythonLibs</depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
